# finances-back

./: finances.cabal  post-entry.sh  readme.md
src/: Main.hs  Schema.hs
