name:                finances
version:             0.0.1
synopsis:            finances project backend
author:              gillchristian
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Schema
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , time
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , transformers
                     , monad-logger
  default-language:    Haskell2010

executable finances
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , time
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , transformers
                     , monad-logger
                     , resource-pool
                     , validate-input
  default-language:    Haskell2010
